--- a/.github/workflows/ci_front.yml
+++ b/.github/workflows/ci_front.yml
@@ -1,9 +1,13 @@
-name: CI
+name: CI (frontend)
 on:
   push:
   pull_request:
     branches: [main]
   workflow_dispatch:
+
+defaults:
+  run:
+    working-directory: ./frontend
 
 jobs:
   Unit_test_frontend:
@@ -14,6 +18,7 @@ jobs:
 
       - name: Set up Node
         uses: ./.github/workflows/setup-node
+    
 
       - name: Run unit tests
         run: npm test
@@ -40,7 +45,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Node
-        uses: ./.github/workflows/setup-node
+        uses: ./.github/workflow/setup-node
 
       - name: Format code
         run: npm run format
