ci: Add cwd arg to setup-node

--- a/.github/workflows/ci_front.yml
+++ b/.github/workflows/ci_front.yml
@@ -18,7 +18,8 @@ jobs:
 
       - name: Set up Node
         uses: ./.github/workflows/setup-node
-    
+        with:
+          cwd: ./frontend
 
       - name: Run unit tests
         run: npm test
@@ -31,6 +32,8 @@ jobs:
 
       - name: Set up Node
         uses: ./.github/workflows/setup-node
+        with:
+          cwd: ./frontend
 
       - name: Run lint
         run: npm run lint
@@ -46,6 +49,8 @@ jobs:
 
       - name: Set up Node
         uses: ./.github/workflow/setup-node
+        with:
+          cwd: ./frontend
 
       - name: Format code
         run: npm run format
