ci: Change ./frontend to default cwd

--- a/.github/workflows/setup-node/action.yml
+++ b/.github/workflows/setup-node/action.yml
@@ -8,7 +8,7 @@ inputs:
   cwd:
     description: Working directory
     required: false
-    default: "."
+    default: "./frontend"
 
 runs:
   using: "composite"
