--- a/.github/workflows/setup-node/action.yml
+++ b/.github/workflows/setup-node/action.yml
@@ -21,6 +21,7 @@ runs:
       with:
         node-version: lts/*
         cache: npm
+        cache-dependency-path: "${{ inputs.cwd }}/package-lock.json"
 
     - name: Install dependencies
       run: npm install
