--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 stockfish = "^3.28.0"
+pylint = "^3.0.3"
+autopep8 = "^2.0.4"
 
 
 [build-system]
