--- a/.github/workflows/ci_back.yml
+++ b/.github/workflows/ci_back.yml
@@ -2,7 +2,7 @@ name: CI (backend)
 on:
   push:
   pull_request:
-    branches: [main]
+    branches: [main, dev]
   workflow_dispatch:
 
 defaults:
@@ -10,7 +10,7 @@ defaults:
     working-directory: ./backend
 
 jobs:
-  Unit_test:
+  Lint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -29,35 +29,3 @@ jobs:
       - name: Analysing the code with pylint
         run: |
           pylint $(git ls-files '*.py')
-
-  Lint:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Node
-        uses: ./.github/workflows/setup-node
-
-      - name: Run lint
-        run: npm run lint
-
-  Format:
-    runs-on: ubuntu-latest
-
-    permissions:
-      contents: write
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Node
-        uses: ./.github/workflows/setup-node
-
-      - name: Format code
-        run: npm run format
-
-      - name: Commit and push changes
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "style: Format code"
