--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -8,4 +8,4 @@ WORKDIR /app
 
 RUN python3 -m poetry install
 
-CMD [ "poetry", "run", "python3", "src/main.py"]
+CMD [ "poetry", "run", "python3", "src/chess.py"]
