fix: Set working directory for setup-poetry

--- a/.github/workflows/setup-poetry/action.yml
+++ b/.github/workflows/setup-poetry/action.yml
@@ -31,4 +31,5 @@ runs:
 
     - name: Install dependencies
       run: poetry install
+      working-directory: ${{ inputs.cwd }}
       shell: bash
