--- a/.github/workflows/ci_back.yml
+++ b/.github/workflows/ci_back.yml
@@ -5,6 +5,10 @@ on:
     branches: [main]
   workflow_dispatch:
 
+defaults:
+  run:
+    working-directory: ./backend
+
 jobs:
   Unit_Test:
     if: false
