--- a/.github/workflows/ci_back.yml
+++ b/.github/workflows/ci_back.yml
@@ -11,7 +11,6 @@ defaults:
 
 jobs:
   Unit_Test:
-    if: false
     runs-on: ubuntu-latest
 
     steps:
@@ -19,7 +18,7 @@ jobs:
       - name: Set up
         uses: ./setup-action
       - name: Run unit tests
-        run: poetry run coverage run --branch -m pytest
+        run: poetry run coverage run --branch -m pytest src/tests
       - name: Coverage report
         run: poetry run coverage xml
       - name: Upload coverage reports to Codecov
