--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -3,9 +3,10 @@ FROM ubuntu:latest
 RUN apt-get update -y && apt-get install -y python3 python3-pip
 RUN python3 -m pip install poetry
 
-COPY . /app
+COPY . ./app
 WORKDIR /app
 
 RUN python3 -m poetry install
 
-CMD [ "poetry", "run", "python3", "src/chess.py"]
+EXPOSE 5000
+CMD ["poetry", "run", "python3", "src/app.py"]
