--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   backend:
     build:
       context: ./backend
+    ports:
+      - "5000:5000"
     depends_on:
       - frontend
   frontend:
