--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,13 +10,14 @@ python = "^3.10"
 flask = "^3.0.0"
 flask-cors = "^4.0.0"
 stockfish = "^3.28.0"
-pytest = "^7.4.4"
+invoke = "^2.2.0"
+
+[tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
 isort = "^5.13.2"
-invoke = "^2.2.0"
 coverage = "^7.4.0"
 pylint = "^3.0.3"
-
+pytest = "^7.4.4"
 
 [build-system]
 requires = ["poetry-core"]
