--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,8 @@ version: '3'
 services:
   backend:
     build:
-      context: ./backend
+      context: ./
     ports:
       - "5000:5000"
-    depends_on:
-      - frontend
-  frontend:
-    network_mode: host
-    build:
-      context: ./frontend
+
 
