--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,11 @@ services:
   backend:
     build:
       context: ./
+      dockerfile: app.dockerfile
     ports:
       - "5000:5000"
 
-
+  enginemain:
+    build:
+      context: ./
+      dockerfile: main.dockerfile
