--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ flask = "^3.0.0"
 flask-cors = "^4.0.0"
 stockfish = "^3.28.0"
 invoke = "^2.2.0"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
