chore: Set cwd for VSCode pylint extension

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.testing.cwd": "${workspaceFolder}/backend/src",
     "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true
+    "python.testing.pytestEnabled": true,
+    "pylint.cwd": "${workspaceFolder}/backend/src"
 }
