--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "python.testing.cwd": "${workspaceFolder}/backend/src",
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
-    "pylint.cwd": "${workspaceFolder}/backend/src"
+    "pylint.cwd": "${workspaceFolder}/backend/src",
+    "isort.args": [
+        "--profile=black"
+    ],
 }
