--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag tira-app
+      run: docker build . --file Dockerfile --tag kontrakti/tira-app
     - name: Push Docker image to registry
       run: docker push kontrakti/tira-app:tira-app
