--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "kokopu": "^4.8.1",
+    "kokopu-react": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
