--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest",
-    "format": "prettier --write src"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "axios": "^1.6.5",
