--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ stockfish = "^3.28.0"
 invoke = "^2.2.0"
 python-dotenv = "^1.0.0"
 python-chess = "^1.999"
+flask-socketio = "^5.3.6"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
