--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,10 @@
         "@testing-library/react": "^14.1.2",
         "@testing-library/user-event": "^14.5.2",
         "@types/jest": "^29.5.11",
+        "@types/jquery": "^3.5.29",
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
+        "@types/socket.io-client": "^3.0.0",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
         "@vitejs/plugin-react": "^4.2.1",
@@ -36,6 +38,7 @@
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "prettier": "^3.2.2",
+        "socket.io-client": "^4.7.4",
         "ts-jest": "^29.1.1",
         "typescript": "^5.3.3",
         "vite": "^5.0.8"
