--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
-        "test": "jest",
+        "test": "vitest",
         "format": "prettier --write ."
     },
     "dependencies": {
@@ -24,7 +24,6 @@
         "@testing-library/jest-dom": "^6.2.0",
         "@testing-library/react": "^14.1.2",
         "@testing-library/user-event": "^14.5.2",
-        "@types/jest": "^29.5.11",
         "@types/jquery": "^3.5.29",
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
@@ -35,12 +34,10 @@
         "eslint": "^8.55.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
-        "jest": "^29.7.0",
-        "jest-environment-jsdom": "^29.7.0",
         "prettier": "^3.2.2",
         "socket.io-client": "^4.7.4",
-        "ts-jest": "^29.1.1",
         "typescript": "^5.3.3",
-        "vite": "^5.0.8"
+        "vite": "^5.0.8",
+        "vitest": "^1.2.1"
     }
 }
