--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
         "eslint": "^8.55.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
+        "jsdom": "^24.0.0",
         "prettier": "^3.2.2",
         "socket.io-client": "^4.7.4",
         "typescript": "^5.3.3",
