--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
         "@testing-library/jest-dom": "^6.2.1",
         "@testing-library/react": "^14.1.2",
         "@testing-library/user-event": "^14.5.2",
+        "@types/jest": "^29.5.11",
         "@types/jquery": "^3.5.29",
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
