--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
         "test": "vitest",
-        "format": "prettier --write ."
+        "format": "prettier --write .",
+        "cypress:open": "cypress open"
     },
     "dependencies": {
         "axios": "^1.6.5",
@@ -32,6 +33,7 @@
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
         "@vitejs/plugin-react": "^4.2.1",
+        "cypress": "^13.6.3",
         "eslint": "^8.55.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
