--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
         "test": "vitest",
+        "coverage": "vitest run --coverage",
         "format": "prettier --write .",
         "cypress:open": "cypress open",
         "test:e2e": "cypress run"
@@ -34,6 +35,7 @@
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
         "@vitejs/plugin-react": "^4.2.1",
+        "@vitest/coverage-v8": "^1.2.1",
         "cypress": "^13.6.3",
         "eslint": "^8.55.0",
         "eslint-plugin-react-hooks": "^4.6.0",
