--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     },
     "dependencies": {
         "axios": "^1.6.5",
+        "igniteui-react-core": "^18.5.1",
+        "igniteui-react-gauges": "^18.5.1",
         "kokopu": "^4.8.1",
         "kokopu-react": "^3.0.2",
         "react": "^18.2.0",
