--- a/backend/.pylintrc
+++ b/backend/.pylintrc
@@ -1,8 +1,8 @@
 [MASTER]
 disable=
-    C0114, # missing-module-docstring
-    C0115, # missing-class-docstring
-    C0116, # missing-function-docstring
+    missing-module-docstring,
+    missing-class-docstring,
+    missing-function-docstring,
 
 [TYPECHECK]
 ignored-classes=BaseBoard
