ci(#20): Run Cypress with cypress-io/github-action

--- a/.github/workflows/e2e-testing.yml
+++ b/.github/workflows/e2e-testing.yml
@@ -16,8 +16,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up
-        uses: ./.github/workflows/setup-node
-
-      - name: Run E2E tests
-        run: npm run test:e2e
+      - name: Run end-to-end tests
+        uses: cypress-io/github-action@v6
