--- a/.github/workflows/e2e-testing.yml
+++ b/.github/workflows/e2e-testing.yml
@@ -4,10 +4,6 @@ on:
     - cron: 0 */4 * * *
   workflow_dispatch:
 
-defaults:
-  run:
-    working-directory: ./frontend
-
 jobs:
   e2e_staging:
     runs-on: ubuntu-latest
@@ -18,3 +14,5 @@ jobs:
 
       - name: Run end-to-end tests
         uses: cypress-io/github-action@v6
+        with:
+          working-directory: frontend
