debug: Print environment variable

--- a/.github/workflows/e2e-testing.yml
+++ b/.github/workflows/e2e-testing.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - run: echo ${{ env.CYPRESS_BASE_URL }}
+
       - name: Run end-to-end tests
         uses: cypress-io/github-action@v6
         env:
