--- a/.github/workflows/e2e-testing.yml
+++ b/.github/workflows/e2e-testing.yml
@@ -23,33 +23,6 @@ jobs:
 
   e2e_local:
     runs-on: ubuntu-latest
-    needs:
-      - start_backend
-      - start_frontend
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Run end-to-end tests
-        uses: cypress-io/github-action@v6
-        with:
-          working-directory: frontend
-
-  start_frontend:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Start frontend
-        uses: cypress-io/github-action@v6
-        with:
-          working-directory: frontend
-          start: npm run dev
-          runTests: false
-
-  start_backend:
-    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -58,5 +31,17 @@ jobs:
         uses: ./.github/workflows/setup-poetry
 
       - name: Start backend
-        run: poetry run invoke start
+        run: poetry run invoke start &&
         working-directory: ./backend
+
+      - name: Start frontend
+        uses: cypress-io/github-action@v6
+        with:
+          working-directory: frontend
+          start: npm run dev
+          runTests: false
+
+      - name: Run end-to-end tests
+        uses: cypress-io/github-action@v6
+        with:
+          working-directory: frontend
