--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
         "test:e2e": "cypress run"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.1.0",
         "axios": "^1.6.5",
         "kokopu": "^4.8.1",
         "kokopu-react": "^3.0.2",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-redux": "^9.1.0"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.23.8",
