--- a/.github/workflows/ci_front.yml
+++ b/.github/workflows/ci_front.yml
@@ -1,4 +1,5 @@
 name: CI (frontend)
+
 on:
   push:
   pull_request:
@@ -22,19 +23,6 @@ jobs:
       - name: Run unit tests
         run: npm test
 
-  Lint:
-    runs-on: ubuntu-latest
-    needs: Format
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Node
-        uses: ./.github/workflows/setup-node
-
-      - name: Run lint
-        run: npm run lint
-
   Format:
     runs-on: ubuntu-latest
 
@@ -54,3 +42,39 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "style: Format code"
+
+  Lint:
+    runs-on: ubuntu-latest
+    needs: Format
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Node
+        uses: ./.github/workflows/setup-node
+
+      - name: Run lint
+        run: npm run lint
+
+  Build:
+    runs-on: ubuntu-latest
+    needs: [Unit_test, Lint]
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app
+
+  Push:
+    runs-on: ubuntu-latest
+    needs: Build
+    steps:
+      - name: Push Docker image to registry
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app
