--- a/.github/workflows/ci_front.yml
+++ b/.github/workflows/ci_front.yml
@@ -25,6 +25,7 @@ jobs:
 
   Format:
     runs-on: ubuntu-latest
+    needs: Unit_test
 
     permissions:
       contents: write
@@ -55,26 +56,3 @@ jobs:
 
       - name: Run lint
         run: npm run lint
-
-  Build:
-    runs-on: ubuntu-latest
-    needs: [Unit_test, Lint]
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app
-
-  Push:
-    runs-on: ubuntu-latest
-    needs: Build
-    steps:
-      - name: Push Docker image to registry
-        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app
