--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,25 +1,32 @@
-name: Docker Image CI
+name: Build
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+  workflow_run:
+    workflows: ["CI (frontend)", "CI (backend)"]
+    types:
+      - completed
+    branches: [dev]
+  
 jobs:
-
-  build:
-
+  Build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app
-    - name: Push Docker image to registry
-      run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app
+      - uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app
+
+  Push:
+    runs-on: ubuntu-latest
+    needs: Build
+    steps:
+      - name: Push Docker image to registry
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app
+
