--- a/.github/workflows/ci_back.yml
+++ b/.github/workflows/ci_back.yml
@@ -2,7 +2,7 @@ name: CI (backend)
 on:
   push:
   pull_request:
-    branches: [main]
+    branches: [main, dev]
   workflow_dispatch:
 
 defaults:
