--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,12 +21,11 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app
+        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app:latest
 
   Push:
     runs-on: ubuntu-latest
     needs: Build
     steps:
       - name: Push Docker image to registry
-        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app
-
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app:latest
