--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
         "preview": "vite preview",
         "test": "vitest",
         "coverage": "vitest run --coverage",
-        "format": "prettier --write .",
+        "format": "prettier --write . && eslint --fix .",
         "cypress:open": "cypress open",
         "test:e2e": "cypress run"
     },
@@ -34,11 +34,13 @@
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
-        "@typescript-eslint/parser": "^6.14.0",
+        "@typescript-eslint/parser": "^6.21.0",
         "@vitejs/plugin-react": "^4.2.1",
         "@vitest/coverage-v8": "^1.2.1",
         "cypress": "^13.6.3",
         "eslint": "^8.55.0",
+        "eslint-import-resolver-typescript": "^3.6.1",
+        "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
         "jsdom": "^24.0.0",
