--- a/.github/workflows/ci_front.yml
+++ b/.github/workflows/ci_front.yml
@@ -39,35 +39,17 @@ jobs:
       - name: Format code
         run: npm run format
 
+      - name: Fix lint issues
+        run: npm run lint:fix
+
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "style: Format code"
 
-  Fix_lint:
-    runs-on: ubuntu-latest
-    needs: Format
-
-    permissions:
-      contents: write
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Node
-        uses: ./.github/workflows/setup-node
-
-      - name: Format code
-        run: npm run format
-
-      - name: Commit and push changes
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "fix: Lint issues"
-
   Lint:
     runs-on: ubuntu-latest
-    needs: Fix_lint
+    needs: Format
 
     steps:
       - uses: actions/checkout@v4
