CD(#20): fix e2e-testing run
Co-authored-by: EljasV <EljasV@users.noreply.github.com>

--- a/.github/workflows/e2e-testing.yml
+++ b/.github/workflows/e2e-testing.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Set up Node
         uses: ./.github/workflows/setup-node
       - name: Do tests
-        run: run_e2e_tests.sh
+        run: bash run_e2e_tests.sh
