--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,13 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
-        "sass": "^1.70.0"
+        "sass": "^1.70.0",
+        "typescript": "^5.3.3",
+        "vite": "^5.0.8",
+        "socket.io-client": "^4.7.4",
+        "@types/react": "^18.2.43",
+        "@types/react-dom": "^18.2.17",
+        "@vitejs/plugin-react": "^4.2.1"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.23.8",
@@ -33,11 +39,8 @@
         "@testing-library/user-event": "^14.5.2",
         "@types/jest": "^29.5.11",
         "@types/jquery": "^3.5.29",
-        "@types/react": "^18.2.43",
-        "@types/react-dom": "^18.2.17",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.21.0",
-        "@vitejs/plugin-react": "^4.2.1",
         "@vitest/coverage-v8": "^1.2.1",
         "cypress": "^13.6.3",
         "eslint": "^8.55.0",
@@ -47,9 +50,6 @@
         "eslint-plugin-react-refresh": "^0.4.5",
         "jsdom": "^24.0.0",
         "prettier": "^3.2.2",
-        "socket.io-client": "^4.7.4",
-        "typescript": "^5.3.3",
-        "vite": "^5.0.8",
         "vitest": "^1.2.1"
     }
 }
