--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,33 +6,29 @@ on:
     types:
       - completed
     branches: [dev]
-  
+  workflow_dispatch:
+
 jobs:
   Build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app:latest
-
-  Build_and_Push:
-    needs: Build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+      - name: Build image
+        id: build-image
+        uses: redhat-actions/buildah-build@v2
         with:
+          image: tira-app:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app:latest
+          containerfiles: |
+            ./Dockerfile
+          build-args: |
+            STAGING=true
+
+      - name: Push to Docker Hub
+        uses: redhat-actions/push-to-registry@v2
+        with:
+          image: ${{ steps.build-image.outputs.image }}
+          tags: ${{ steps.build-image.outputs.tags }}
+          registry: docker.io/kontrakti
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
-      - name: Build and Push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app:latest
