--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,19 +17,20 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.1.0",
+        "@types/react": "^18.2.43",
+        "@types/react-dom": "^18.2.17",
+        "@vitejs/plugin-react": "^4.2.1",
         "axios": "^1.6.5",
         "kokopu": "^4.8.1",
         "kokopu-react": "^3.0.2",
+        "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
         "sass": "^1.70.0",
-        "typescript": "^5.3.3",
-        "vite": "^5.0.8",
         "socket.io-client": "^4.7.4",
-        "@types/react": "^18.2.43",
-        "@types/react-dom": "^18.2.17",
-        "@vitejs/plugin-react": "^4.2.1"
+        "typescript": "^5.3.3",
+        "vite": "^5.0.8"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.23.8",
@@ -39,6 +40,7 @@
         "@testing-library/user-event": "^14.5.2",
         "@types/jest": "^29.5.11",
         "@types/jquery": "^3.5.29",
+        "@types/lodash": "^4.14.202",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.21.0",
         "@vitest/coverage-v8": "^1.2.1",
