--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,9 +45,10 @@
         "@typescript-eslint/parser": "^6.21.0",
         "@vitest/coverage-v8": "^1.2.1",
         "cypress": "^13.6.3",
-        "eslint": "^8.55.0",
+        "eslint": "^8.56.0",
         "eslint-import-resolver-typescript": "^3.6.1",
         "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
         "jsdom": "^24.0.0",
