Revert "build(#24): Move MODE to envs"
This reverts commit f39550fc49c13db8a8ca0ab9754a94f053a2dad5.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app:latest
           containerfiles: |
             ./Dockerfile
-          envs: |
+          build-args: |
             MODE=${{ vars.MODE }}
 
       - name: Push to Docker Hub
