--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,10 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.1.0",
+        "@types/lodash": "^4.14.202",
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
         "@vitejs/plugin-react": "^4.2.1",
-        "@types/lodash": "^4.14.202",
         "axios": "^1.6.5",
         "kokopu": "^4.8.1",
         "kokopu-react": "^3.0.2",
@@ -28,6 +28,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
+        "recharts": "^2.12.0",
         "sass": "^1.70.0",
         "socket.io-client": "^4.7.4",
         "typescript": "^5.3.3",
