--- a/.github/workflows/ci_back.yml
+++ b/.github/workflows/ci_back.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
         env:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
           slug: game-ai-platform-team/tira-ai-platform
         with:
           file: ./backend/coverage.xml
