--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,9 +14,12 @@ env:
   APP_PORT: "8080"
 
 on:
-  # https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows
-  push: 
-    branches: [ dev ]
+  workflow_run:
+    workflows: ["CI (frontend)", "CI (backend)"]
+    types:
+      - completed
+    branches: [dev]
+  workflow_dispatch:
 
 jobs:
   build-and-push: 
