refactor: Group ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
-*.tmp
+#  Python
 __pycache__/
 backend/.pytest_cache/
+
+# Temp files
+*.tmp
 backend/temp/**
 !backend/temp/.gitkeep
+
+# Coverage
 **/*coverage*
 !.coveragerc
+
 .idea
 move_current
 screenshots
