--- a/.github/workflows/ci_back.yml
+++ b/.github/workflows/ci_back.yml
@@ -22,13 +22,11 @@ jobs:
       - name: Run unit tests
         run: poetry run invoke coverage-xml
       
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-          slug: game-ai-platform-team/tira-ai-platform
+      - name: Upload coverage report artifact
+        uses: actions/upload-artifact@v4
         with:
-          file: ./backend/coverage.xml
+          name: backend-coverage
+          path: ./backend/coverage.xml
 
   Lint:
     runs-on: ubuntu-latest
