--- a/.github/workflows/ci_front.yml
+++ b/.github/workflows/ci_front.yml
@@ -23,13 +23,11 @@ jobs:
       - name: Run unit tests
         run: npm run coverage
 
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-          slug: game-ai-platform-team/tira-ai-platform
+      - name: Upload coverage report artifact
+        uses: actions/upload-artifact@v4
         with:
-          file: ./frontend/coverage/coverage-final.json
+          name: frontend-coverage
+          path: ./frontend/coverage/coverage-final.json
 
 
   Format:
