--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,12 +14,9 @@ env:
   APP_PORT: "8080"
 
 on:
-  workflow_run:
-    workflows: ["CI (frontend)", "CI (backend)"]
-    types:
-      - completed
-    branches: [dev]
-  workflow_dispatch:
+  # https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows
+  push: 
+    branches: [ dev ]
 
 jobs:
   build-and-push: 
