--- a/.github/workflows/setup-node/action.yml
+++ b/.github/workflows/setup-node/action.yml
@@ -12,14 +12,20 @@ runs:
     - name: Checkout
       uses: actions/checkout@v4
 
+    - name: Install pnpm
+      uses: pnpm/action-setup@v3
+      with:
+        version: latest
+        run_install: false
+
     - name: Install Node.js
       uses: actions/setup-node@v4
       with:
         node-version: lts/*
-        cache: npm
-        cache-dependency-path: "${{ inputs.cwd }}/package-lock.json"
+        cache: pnpm
+        cache-dependency-path: "${{ inputs.cwd }}/package-lock.yaml"
 
     - name: Install dependencies
-      run: npm install
+      run: pnpm install
       working-directory: ${{ inputs.cwd }}
       shell: bash
