--- a/.github/workflows/setup-node/action.yml
+++ b/.github/workflows/setup-node/action.yml
@@ -23,6 +23,7 @@ runs:
       with:
         node-version: lts/*
         cache: pnpm
+        cache-dependency-path: "${{ inputs.cwd }}/pnpm-lock.yaml"
 
     - name: Install dependencies
       run: pnpm install
