--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ invoke = "^2.2.0"
 python-dotenv = "^1.0.0"
 python-chess = "^1.999"
 flask-socketio = "^5.3.6"
+numpy = "^1.26.4"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
