fix(#90): Coverage report not uploading

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -4,6 +4,7 @@ on:
     workflows: ["CI (frontend)", "CI (backend)"]
     types:
       - completed
+    branches: [dev]
   workflow_dispatch:
 
 jobs:
