--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build
 
 on:
   workflow_run:
-    workflows: ["CI (frontend)", "CI (backend)"]
+    workflows: [CI]
     types:
       - completed
     branches: [dev]
