--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,12 @@ on:
 
 jobs:
   ci_frontend:
+    permissions:
+      contents: write
+
     uses: ./.github/workflows/ci_front.yml
   ci_backend:
+    permissions:
+      contents: write
+
     uses: ./.github/workflows/ci_back.yml
