--- a/.github/workflows/ci_back.yml
+++ b/.github/workflows/ci_back.yml
@@ -62,4 +62,4 @@ jobs:
           author_name: github-actions[bot]
           author_email: github-actions[bot]@users.noreply.github.com
           message: Format code
-          pull: "--rebase"
+          pull: "--rebase --autostash"
