ci(#91): Add better names for workflow jobs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,11 +8,13 @@ on:
 
 jobs:
   ci_frontend:
+    name: CI (front-end)
     permissions:
       contents: write
 
     uses: ./.github/workflows/ci/ci_frontend.yml
   ci_backend:
+    name: CI (back-end)
     permissions:
       contents: write
 
