ci(#91): Make e2e test workflow reusable

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,8 @@ jobs:
       contents: write
 
     uses: ./.github/workflows/ci/ci_backend.yml
+
+  e2e_test:
+    name: End-to-end test
+
+    uses: ./.github/workflows/ci/e2e_test.yml
