--- a/.github/workflows/ci/e2e_test.yml
+++ b/.github/workflows/ci/e2e_test.yml
@@ -2,10 +2,7 @@ name: End-to-end testing
 
 on:
   workflow_dispatch:
-  push:
-    branches: [main, dev]
-  pull_request:
-    branches: [main]
+  workflow_call:
 
 jobs:
   e2e:
