fix(#91): Codecov token missing

--- a/.github/workflows/ci_backend.yml
+++ b/.github/workflows/ci_backend.yml
@@ -2,7 +2,9 @@ name: CI (backend)
 on:
   workflow_dispatch:
   workflow_call:
-
+    secrets:
+      CODECOV_TOKEN:
+        required: true
 defaults:
   run:
     working-directory: ./backend
