--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,17 @@ jobs:
       contents: write
 
     uses: ./.github/workflows/ci_frontend.yml
+    secrets:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
   ci_backend:
     name: CI (back-end)
     permissions:
       contents: write
 
     uses: ./.github/workflows/ci_backend.yml
+    secrets:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   e2e_test:
     name: End-to-end test
