ci: Update auto format message

--- a/.github/workflows/ci_backend.yml
+++ b/.github/workflows/ci_backend.yml
@@ -63,5 +63,5 @@ jobs:
         with:
           author_name: github-actions[bot]
           author_email: github-actions[bot]@users.noreply.github.com
-          message: Format code
+          message: "style: Format code"
           pull: "--rebase --autostash"
