Revert "fix(#91): Quote command with single quote"
This reverts commit 277059ad08be2c9921be1f1ce30ce602b40ab967.

--- a/.github/workflows/e2e_test.yml
+++ b/.github/workflows/e2e_test.yml
@@ -34,4 +34,4 @@ jobs:
           wait-on: "http://localhost:5000"
           wait-on-timeout: 10
           build: pnpm run build
-          start: 'pnpm run server &'
+          start: "pnpm run server &"
