fix: change tag back to latest due to oc stuff

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app:dev
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/tira-app:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
