ci: Add complexity check to pylint

--- a/backend/.pylintrc
+++ b/backend/.pylintrc
@@ -1,10 +1,11 @@
-[MASTER]
+[MAIN]
 disable=
     missing-module-docstring,
     missing-class-docstring,
     missing-function-docstring,
     too-few-public-methods,
 ignore=tests
+load-plugins = pylint.extensions.mccabe
 
 [TYPECHECK]
 ignored-classes=BaseBoard
