chore(#24): Add secret file to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ backend/temp/**
 move_current
 screenshots
 frontend/cypress/downloads/**
+
+# Local secrets/environment variables
+*.local
+*secret*
