--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,3 +33,30 @@ jobs:
       OIDC_CLIENT_SECRET: ${{ secrets.OIDC_CLIENT_SECRET }}
 
     uses: ./.github/workflows/e2e_test.yml
+
+  build_staging:
+    name: Build and push to Docker Hub
+    needs: [ci_backend, ci_frontend, e2e_test]
+    if: github.event == 'push' && github.ref_name == 'dev'
+
+    uses: ./.github/workflows/build.yml
+    secrets:
+      DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+      DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+    with:
+      environment: staging
+      MODE: staging
+
+  build_production:
+    name: Build and push to Docker Hub
+    needs: [ci_backend, ci_frontend, e2e_test]
+    if: github.event == 'push' && github.ref_name == 'main'
+
+    uses: ./.github/workflows/build.yml
+    secrets:
+      DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+      DOCKER_HUB_ACCESS_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+    with:
+      environment: production
+      MODE: production
+      tag: production
