feat(#24): Add https and fetch token from auth server

--- a/backend/wsgi.ini
+++ b/backend/wsgi.ini
@@ -1,8 +1,11 @@
 [uwsgi]
-chdir=src
-module=app:app
-http-socket=:5000
-master=true
-http-websockets=true
-gevent=1000
+chdir = src
+module = app:app
+http = :5001
+https = :5000,dev.cert,dev.key
+
+master = true
+http-websockets = true
+gevent = 1000
 die-on-term = true
+
