chore: Update VS Code settings to run pylint and pytest in parallel

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,10 @@
     "python.testing.pytestEnabled": true,
     "pylint.cwd": "${workspaceFolder}/backend/src",
     "pylint.args": [
-        "--rcfile=../.pylintrc"
+        "--rcfile=../.pylintrc",
+        "-j=0"
     ],
+    "python.testing.pytestArgs": [
+        "-n=auto"
+    ]
 }
