ci(#108): Call front-end CI from game-ai-platform-team/workflows

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,9 +11,11 @@ jobs:
     permissions:
       contents: write
 
-    uses: ./.github/workflows/ci_frontend.yml
+    uses: game-ai-platform-team/workflows/.github/workflows/ci_node.yml@main
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+    with:
+      working-directory: ./frontend
 
   ci_backend:
     name: CI (back-end)
