fix(#108): Pass backend directory to e2e tests

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -38,6 +38,7 @@ jobs:
     with:
       working-directory: ./frontend
       environment: staging
+      backend-directory: ./backend
     secrets:
       OIDC_CLIENT_ID: ${{ secrets.OIDC_CLIENT_ID }}
       OIDC_CLIENT_SECRET: ${{ secrets.OIDC_CLIENT_SECRET }}
